# thechosenfrog

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  README.old.md  imgui.ini
Game/: CMakeLists.txt  ConsoleUpdate.cpp  Updateable.cpp  main.cpp
Game/assets/: settings.ini
Game/assets/meshes/: SignPost.mtl
Game/assets/settings/: settings.ini
Game/assets/shaders/: cloud.frag  cloud.vert  default.frag  default.vert  fbo.frag  fbo.vert  fboPost.frag  font.frag  font.geom  font.vert  parabola.frag  parabola.geom  parabola.vert  skybox.frag  skybox.vert  unlit.frag  unlit.vert
Game/libs/glad/include/glad/: glad.h
Game/libs/glad/src/: glad.c
Game/libs/imgui/: imgui.cpp
Game/src/: AppSettings.h  CharControllerConfiguration.cpp  CharControllerConfiguration.h  CloudGen.h  CloudPlatforms.cpp  CloudPlatforms.h  ConsoleGame.cpp  ConsoleGame.h  ConsoleUpdate.cpp  Constants.h  DebugWindowIds.h  EventManager.cpp  Game.cpp  Game.h  GameRenderer.cpp  GameUpdater.cpp  IDebugGUI.cpp  IDebugGUI.h  IEventManager.h  IGameRenderer.h  IGameUpdater.h  ImGuiDebugGUI.cpp  Physics.cpp  Physics.h  RuntimeClasses.h  RuntimeSoLoud.h  RuntimeTypeIds.h  SignGenerator.cpp  SignGenerator.h  StdioLogSystem.h  TransformComponent.cpp  TransformComponent.h  Updateable.h  main.cpp
Game/src/assets/: AssetList.h  AssetManager.cpp  AssetManager.h  Assets.cpp  Assets.h  BitmapFont.cpp  BitmapFont.h  BitmapFontIds.h  BitmapFontList.cpp  CubeMap.cpp  CubeMap.h  CubeMapIds.h  CubeMapList.cpp  Framebuffer.cpp  Framebuffer.h  FramebufferIds.h  FramebufferList.cpp  ImageData.cpp  ImageData.h  Material.cpp  Material.h  MaterialIds.h  MaterialList.cpp  Mesh.cpp  Mesh.h  MeshIds.h  MeshList.cpp  MusicIds.h  MusicList.cpp  Shader.cpp  Shader.h  ShaderIds.h  ShaderList.cpp  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramIds.h  ShaderProgramList.cpp  SoundIds.h  SoundList.cpp  Surface.cpp  (+5 more)
Game/src/components/: CameraComponent.cpp  CameraComponent.h  CameraControllerComponent.h  CharControllerComponent.cpp  CharControllerComponent.h  CloudComponent.cpp  CloudComponent.h  Component.cpp  Component.h  Components.cpp  Components.h  Entity.h  MaterialComponent.cpp  MaterialComponent.h  MeshComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  PlatformComponent.h  PlayerComponent.h  PlayerHUDComponent.cpp  PlayerHUDComponent.h  TextComponent.h  TransformComponent.cpp  TransformComponent.h
Game/src/logger/: imguial_log.cpp  imguial_log.h
Game/src/scenes/: IScene.h  MainScene.cpp
Game/src/util/: CameraUtil.cpp  CameraUtil.h  Color.h  GLMPXConversion.cpp  GLMPXConversion.h  RuntimeCompileUtils.h
RuntimeCompiledCPlusPlus/: CMakeLists.txt
RuntimeCompiledCPlusPlus/RuntimeObjectSystem/: RuntimeObjectSystem.cpp
assimp/code/: FBXDocumentUtil.cpp  FBXUtil.cpp
glfw/: CMakeLists.txt
physx/windows/checked/: PhysXCharacterKinematic_static_32.lib  PhysXCommon_32.lib  PhysXCooking_32.lib  PhysXExtensions_static_32.lib  PhysXFoundation_32.lib  PhysXPvdSDK_static_32.lib  PhysXTask_static_32.lib  PhysXVehicle_static_32.lib  PhysX_32.lib
physx/windows/release/: PhysXCharacterKinematic_static_32.lib  PhysXCooking_32.lib  PhysXExtensions_static_32.lib  PhysXFoundation_32.lib  PhysXPvdSDK_static_32.lib  PhysXTask_static_32.lib  PhysXVehicle_static_32.lib  PhysX_32.lib
soloud/: CMakeLists.txt
